dataset1235/2025-2/805158916/users/2689107057/executions/71079933_146336312.log
== RUN (2025-08-13 13:58:04)
-- CODE: 
print ("mostro tinha 50 moedinhas")
print(45/3)




-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
15.0
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
15.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 13:56:50)
-- CODE: 
mostro=50
print(45/3)


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
15.0
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
15.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 13:56:21)
-- CODE: 
mostro=50
print(30/3)


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
10.0
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
10.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 13:56:45)
-- CODE: 
mostro=50
print(40/3)


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
13.333333333333334
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
13.333333333333334
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 13:56:10)
-- CODE: 
mostro=50
print(30/3)
g1=
g2=
g3=
info=


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
-- ERROR:
File "XXXX", line 3
    g1=
       ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
-- ERROR:
File "XXXX", line 3
    g1=
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 13:59:00)
-- CODE: 

print(45/3)




-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
15.0
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
15.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 14:00:10)
-- CODE: 
print("cada guerreiro receberar")
print(45/3)
iform=15




-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
15.0
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
15.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 13:59:35)
-- CODE: 
print("cada guerreiro receberar")
print(45/3)




-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
15.0
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
15.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 13:56:26)
-- CODE: 
mostro=50
print(50/3)


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16.666666666666668
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
16.666666666666668
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 14:00:07)
-- CODE: 
print("cada guerreiro receberar")
print(45/3)
iform=15




-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
15.0
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
15.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
